--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 docutils==0.16
+isort==4.3.21
 lxml>=4.2.3
 polib==1.1.0
 Pygments==2.2 ;python_version < '3'
 Pygments==2.6.1 ;python_version >= '3'
 pylint-plugin-utils==0.6
 pylint==1.9.5 ;python_version < '3'
-pylint==2.5.3 ;python_version >= '3'
+pylint==2.6.0 ;python_version >= '3'
 restructuredtext_lint==1.3.1
 rfc3986
 six
