--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-docutils==0.16
+docutils<=0.17.1
 lxml>=4.2.3
 pbr
-polib==1.1.0
+polib<=1.1.1
 Pygments==2.2 ;python_version < '3'
-Pygments==2.6.1 ;python_version >= '3'
+Pygments<=2.10.0 ;python_version >= '3'
 pylint-plugin-utils==0.6
 pylint==1.9.5 ;python_version < '3'
-pylint==2.6.0 ;python_version >= '3'
-restructuredtext_lint==1.3.1
+pylint<=2.10.2 ;python_version >= '3'
+restructuredtext_lint<=1.3.2
 rfc3986
 six
 whichcraft
