[FIX] .travis.yml: npm v18.0.0 is not compatible with ubuntu used from travis
More info about:
 - https://travis-ci.community/t/the-command-npm-config-set-spin-false-failed-and-exited-with-1-during/12909/4

Summary it requires GLIBC_2.28 but it is not available in ubuntu used from travis

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,10 @@ passenv =
 
 commands =
     python --version
-    nodeenv --python-virtualenv
+    # node 18 is not compatible with current ubuntu version used in travis
+    # More info about:
+    #   - https://travis-ci.community/t/the-command-npm-config-set-spin-false-failed-and-exited-with-1-during/12909/4
+    nodeenv --python-virtualenv -n 17.9.0
     npm install -g --no-package-lock --no-save eslint
     eslint --version
     coverage run setup.py test
