--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ cache:
   directories:
     - $HOME/.cache/pip
 
+# node 18 is not compatible with current ubuntu version used in travis
+# More info about:
+#   - https://travis-ci.community/t/the-command-npm-config-set-spin-false-failed-and-exited-with-1-during/12909/4
+node_js:
+  - 17
+
 matrix:
   include:
     - python: 2.7
