--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-dist: jammy
-
 language: python
 
 sudo: false
@@ -30,13 +28,15 @@ matrix:
         TOXENV=pylint
         LINT="1"
         DEPLOY="1"
-    - python: "3.9"
+    - python: "3.9-dev"
       env:
         TOXENV=pylint
     - python: "3.10-dev"
+      dist: jammy
       env:
         TOXENV=pylint
     - python: "3.11-dev"
+      dist: jammy
       env:
         TOXENV=pylint
 
