--- a/pytest.ini
+++ b/pytest.ini
@@ -40,7 +40,7 @@ addopts =
 # the src/ directory by removing
 # --pyargs and pylint_odoo from the options here.
 testpaths =
-    pylint_odoo
+    src
     tests
 
 # Idea from: https://til.simonwillison.net/pytest/treat-warnings-as-errors
