[REF] codecov: Enable codecov again
tox was using a custom coverage file output in order to be able to run with parallels

But codecov needs to know this file

For now, commenting the parallels option and support no files to combine without errors

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
     # Compatible with "tox --parallel" to avoid concurrency
-    COVERAGE_FILE={toxinidir}/.coverage_{envname}
+    # COVERAGE_FILE={toxinidir}/.coverage_{envname}
     COVERAGE_CONTEXT={envname}
 passenv =
     *
@@ -62,7 +62,7 @@ deps = coverage
 skip_install = true
 commands =
     # Workaround https://github.com/tox-dev/tox/issues/1571
-    python -c 'from glob import glob; import subprocess; subprocess.check_call(["coverage", "combine", "--keep"] + glob(".coverage_*"))'
+    python -c 'from glob import glob; import subprocess; [subprocess.check_call(["coverage", "combine", "--keep", i]) for i in glob(".coverage_*")]'
     coverage report
     coverage html
 
